# Game-Website

./: app.py  index.html  index.js  package-lock.json  package.json  pyproject.toml  readme.md
static/: index.js
static/scripts/clicker/: clicker.js
static/scripts/pickanumber/: pickanumber.js
static/scripts/redorblack/: redorblack.js
static/scripts/twentyone/: twentyone.js
static/styles/: gamewindow.css  general.css  header.css
static/styles/clicker/: gamewindow.css
static/styles/index/: body.css
static/styles/pickanumber/: PAN-gamewindow.css
static/styles/redorblack/: gamewindow.css
static/styles/twentyone/: TO-gamewindow.css
styles/: gamewindow.css  general.css
templates/: clicker.html  index.html  redorblack.html  template.html
templates/games/: pickanumber.html  redorblack.html  twentyone.html
